# aspect-tsproject-imports

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
demo/web/apps/: BUILD.bazel  tsconfig.json
demo/web/apps/my-web-app/: BUILD.bazel  package.json
demo/web/apps/my-web-app/src/: app.ts
demo/web/libraries/: tsconfig.json
demo/web/libraries/my-lib-a/: BUILD.bazel  my-lib-a.ts  package.json
demo/web/libraries/my-lib-b/: BUILD.bazel  my-lib-b.ts  package.json
