load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

package(default_visibility = ["//visibility:public"])

exports_files(["tsconfig.base.json"])

npm_link_all_packages(name = "node_modules")

copy_to_bin(
    name = "tsconfig.base",
    srcs = ["tsconfig.base.json"],
    visibility = ["//visibility:public"],
)
